samples/_failures_safe/1761507725_b5e399_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_62d58452.c: In function ‘main’:
./samples/SAFE/__tmp_62d58452.c:171:9: error: expected declaration or statement at end of input
  171 |         if (len > 0 && buffer[len - 1] == '\n') {
      |         ^~
./samples/SAFE/__tmp_62d58452.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_62d58452.c:171:9: error: expected declaration or statement at end of input
